[package]
name = "imagen"
version = "5.0.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.41.1", features = ["full", "io-util"] }
tokio-postgres = "0.7.12"
postgres_array = "0.11.1"
futures = "0.3.31"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[[bin]]
name = "imagen"
path = "src/main.rs"

