[package]
name = "imagen"
version = "2.0.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.41.1", features = ["full"] }
tokio-postgres = "0.7.12"
postgres_array = "0.11.1"
futures = "0.3.31"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
actix-web = "4.9.0"
serde = { version = "1.0.215", features = ["derive"] }
env_logger = "0.10.0"
actix-cors = "0.7.0"



[[bin]]
name = "imagen"
path = "src/main.rs"

